--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/andela-ifatoki/CP2-Shift-DMS/issues"
   },
-  "homepage": "https://github.com/andela-ifatoki/CP2-Shift-DMS#readme"
+  "homepage": "https://github.com/andela-ifatoki/CP2-Shift-DMS#readme",
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.1.0"
+  }
 }
