--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
 node_js: "7"
-script: npm tests
+script: npm run tests
 # after_script:  
 #  - ./node_modules/.bin/gulp coveralls
