--- a/.eslintrc
+++ b/.eslintrc
@@ -6,10 +6,18 @@
     "jsx-a11y",
     "import"
   ],
+  "parserOptions": {
+    "ecmaVersion": 6, 
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "env": {
     "node": true,
     "es6": true,
-    "jasmine": true
+    "jasmine": true,
+    "jest": true,
+    "mocha": true
   },
   "rules": {
     "max-len": [2, 80],
