--- a/package.json
+++ b/package.json
@@ -4,9 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test-server": "mocha",
+    "test-server": "mocha --compilers js:babel-register",
     "test-client": "jest",
-    "tests": "mocha && jest"
+    "tests": "mocha --compilers js:babel-register && jest"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "es6",
+      "js",
+      "jsx"
+    ],
+    "collectCoverage": true,
+    "transform": {
+      "^.+\\.(js|jsx)$": "<rootDir>node_modules/babel-jest"
+    },
+    "unmockedModulePathPatterns": [
+      "react"
+    ]
   },
   "repository": {
     "type": "git",
@@ -19,11 +33,14 @@
   },
   "homepage": "https://github.com/andela-ifatoki/CP2-Shift-DMS#readme",
   "devDependencies": {
+    "babel-jest": "^20.0.3",
+    "babel-preset-env": "^1.5.2",
+    "babel-register": "^6.24.1",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "jest": "^20.0.4",
     "mocha": "^3.4.2"
   }
