--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test-server": "mocha --compilers js:babel-register",
-    "test-client": "jest",
-    "tests": "mocha --compilers js:babel-register && jest"
+    "test-server": "cross-env NODE_ENV=test mocha --compilers js:babel-register server/test/*",
+    "test-client": "cross-env NODE_ENV=test jest",
+    "test": "npm run test-server && npm run test-client",
+    "dev": "nodemon ./server/bin/www --exec babel-node --presets es2015,stage-2",
+    "build": "cross-env NODE_ENV=production node ./server/bin/www"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -33,8 +35,11 @@
   },
   "homepage": "https://github.com/andela-ifatoki/CP2-Shift-DMS#readme",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-jest": "^20.0.3",
     "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -42,6 +47,24 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
     "jest": "^20.0.4",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "nodemon": "^1.11.0",
+    "sinon": "^2.3.5"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.2",
+    "chai": "^4.0.2",
+    "chai-http": "^3.0.0",
+    "cross-env": "^5.0.1",
+    "debug": "^2.6.8",
+    "dotenv": "^4.0.0",
+    "express": "^4.15.3",
+    "jsonwebtoken": "^7.4.1",
+    "moment": "^2.18.1",
+    "morgan": "^1.8.2",
+    "pg": "^6.2.4",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.3.4"
   }
 }
