--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test-server": "cross-env NODE_ENV=test mocha --compilers js:babel-register server/test/*",
     "test-client": "cross-env NODE_ENV=test jest",
     "test": "npm run test-server && npm run test-client",
-    "dev": "nodemon ./server/bin/www --exec babel-node --presets es2015,stage-2",
+    "dev": "webpack -w & nodemon ./server/bin/www --exec babel-node --presets es2015,stage-2",
     "build": "cross-env NODE_ENV=production node ./server/bin/www"
   },
   "jest": {
@@ -37,8 +37,11 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-jest": "^20.0.3",
+    "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-node6": "^11.0.0",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "eslint": "^3.19.0",
@@ -52,6 +55,10 @@
     "sinon": "^2.3.5"
   },
   "dependencies": {
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-react": "^6.24.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "chai": "^4.0.2",
@@ -59,12 +66,20 @@
     "cross-env": "^5.0.1",
     "debug": "^2.6.8",
     "dotenv": "^4.0.0",
+    "dotenv-webpack": "^1.5.2",
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.1",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "pg": "^6.2.4",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.3.4"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "sequelize": "^3.3.4",
+    "webpack": "^3.0.0"
   }
 }
