--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test-server": "cross-env NODE_ENV=test mocha --compilers js:babel-register server/test/*",
     "test-client": "cross-env NODE_ENV=test jest",
     "test": "npm run test-server && npm run test-client",
-    "dev": "webpack -w & nodemon ./server/bin/www --exec babel-node --presets es2015,stage-2",
+    "dev": "nodemon --watch server ./server/bin/www --exec babel-node",
     "build": "cross-env NODE_ENV=production node ./server/bin/www"
   },
   "jest": {
@@ -52,6 +52,7 @@
     "jest": "^20.0.4",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
+    "react-hot-loader": "^1.3.1",
     "sinon": "^2.3.5"
   },
   "dependencies": {
@@ -68,18 +69,23 @@
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.2",
     "express": "^4.15.3",
+    "history": "^4.6.3",
     "jsonwebtoken": "^7.4.1",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "pg": "^6.2.4",
     "pg-hstore": "^2.3.2",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.7.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "sequelize": "^3.3.4",
-    "webpack": "^3.0.0"
+    "webpack": "^3.0.0",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-hot-middleware": "^2.18.2"
   }
 }
