--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "dotenv-webpack": "^1.5.2",
     "express": "^4.15.3",
     "history": "^4.6.3",
+    "joi-browser": "^10.6.0",
     "jsonwebtoken": "^7.4.1",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
@@ -86,7 +87,6 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "sequelize": "^3.3.4",
-    "superagent": "^3.5.2",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0",
     "webpack-hot-middleware": "^2.18.2"
