--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,8 @@
     "es6": true,
     "jasmine": true,
     "jest": true,
-    "mocha": true
+    "mocha": true,
+    "jquery": true
   },
   "rules": {
     "max-len": [2, 80],
