--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "redux": "^3.7.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.71.0",
     "sequelize": "^3.3.4",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0",
