--- a/server/config/config.json
+++ b/server/config/config.json
@@ -16,11 +16,7 @@
     "dialect": "postgres"
   },
   "production": {
-    "username": "",
-    "password": null,
-    "database": "shift-dms",
-    "host": "localhost",
-    "port": 5432,
+    "use_env_variable": "DATABASE_URL",
     "dialect": "postgres"
   }
 }
