--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test-server": "cross-env NODE_ENV=test nyc mocha --compilers js:babel-register --recursive ./server/test --timeout 10000",
+    "test-seed-all": "cross-env NODE_ENV=test sequelize db:seed:undo:all && cross-env NODE_ENV=test sequelize db:seed:all",
+    "test-server": "npm run test-seed-all && cross-env NODE_ENV=test nyc mocha --compilers js:babel-register --recursive ./server/test --timeout 10000",
     "test-client": "cross-env NODE_ENV=test jest",
     "test": "npm run test-server && npm run test-client",
     "dev": "nodemon --watch server ./server/bin/www --exec babel-node",
@@ -76,8 +77,7 @@
     "nodemon": "^1.11.0",
     "nyc": "^11.0.3",
     "react-hot-loader": "^1.3.1",
-    "sinon": "^2.3.5",
-    "supertest": "^3.0.0"
+    "sinon": "^2.3.5"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -88,6 +88,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "chai": "^4.1.0",
+    "chai-arrays": "^1.0.0",
     "chai-http": "^3.0.0",
     "cross-env": "^5.0.1",
     "debug": "^2.6.8",
@@ -99,7 +100,7 @@
     "jsonwebtoken": "^7.4.1",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
-    "pg": "^6.2.4",
+    "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
@@ -112,6 +113,7 @@
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.71.0",
     "sequelize": "^3.3.4",
+    "supertest": "^3.0.0",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0",
     "webpack-hot-middleware": "^2.18.2"
