--- a/package.json
+++ b/package.json
@@ -4,12 +4,34 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test-server": "cross-env NODE_ENV=test mocha --compilers js:babel-register server/test/*",
+    "test-seed-all": "cross-env NODE_ENV=test sequelize db:seed:undo:all && cross-env NODE_ENV=test sequelize db:seed:all",
+    "test-server": "npm run test-seed-all && cross-env NODE_ENV=test nyc mocha --compilers js:babel-register --recursive ./server/test --timeout 10000",
     "test-client": "cross-env NODE_ENV=test jest",
     "test": "npm run test-server && npm run test-client",
     "dev": "nodemon --watch server ./server/bin/www --exec babel-node",
     "start": "babel-node ./server/bin/www",
     "build": "cross-env NODE_ENV=production node ./server/bin/www"
+  },
+  "nyc": {
+    "require": [
+      "babel-register"
+    ],
+    "reporter": [
+      "lcov",
+      "text",
+      "html"
+    ],
+    "include": [
+      "server/"
+    ],
+    "sourceMap": false,
+    "instrument": false,
+    "exclude": [
+      "server/seeders",
+      "server/migrations",
+      "server/test"
+    ],
+    "all": true
   },
   "jest": {
     "moduleFileExtensions": [
@@ -44,6 +66,8 @@
     "jest": "^20.0.4",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
+    "nyc": "^11.0.3",
+    "react-hot-loader": "^1.3.1",
     "sinon": "^2.3.5"
   },
   "dependencies": {
@@ -63,7 +87,8 @@
     "babel-register": "^6.24.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
-    "chai": "^4.0.2",
+    "chai": "^4.1.0",
+    "chai-arrays": "^1.0.0",
     "chai-http": "^3.0.0",
     "cross-env": "^5.0.1",
     "debug": "^2.6.8",
@@ -75,7 +100,7 @@
     "jsonwebtoken": "^7.4.1",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
-    "pg": "^6.2.4",
+    "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
@@ -90,6 +115,7 @@
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.71.0",
     "sequelize": "^3.3.4",
+    "supertest": "^3.0.0",
     "tinymce": "^4.6.4",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0",
