--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8000
 SECRET_KEY=thatswhatfriendsarefor
+DATABASE_URL=postgres://zsrabyec:DRiF0QbOHNc-WZ3ttMLPXAt_0UN7QBM0@stampy.db.elephantsql.com:5432/zsrabyec
