modify the appearance of documents

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=8000
 SECRET_KEY=thatswhatfriendsarefor
-DATABASE_URL=postgres://zsrabyec:DRiF0QbOHNc-WZ3ttMLPXAt_0UN7QBM0@stampy.db.elephantsql.com:5432/zsrabyec
+PROD_DATABASE_URL=postgres://zsrabyec:DRiF0QbOHNc-WZ3ttMLPXAt_0UN7QBM0@stampy.db.elephantsql.com:5432/zsrabyec
+TEST_DATABASE_URL=postgres://gisrmoqn:gRVsbpZ0gwkbC9p0sE10-DvhReEGVXBG@stampy.db.elephantsql.com:5432/gisrmoqn
