--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,16 +2,16 @@
   "development": {
     "username": "",
     "password": null,
-    "database": "shift-dms-test",
+    "database": "shift-dms-dev",
     "host": "localhost",
     "port": 5432,
     "dialect": "postgres"
   },
   "test": {
-    "username": "",
-    "password": null,
-    "database": "shift-dms-test",
-    "host": "localhost",
+    "username": "wtgvyalj",
+    "password": "HrSPNSOb6dByUNjzbN4YzBPJQ8rob3yr",
+    "database": "wtgvyalj",
+    "host": "stampy.db.elephantsql.com",
     "port": 5432,
     "dialect": "postgres"
   },
