feature (search): implement document search (#25)
* unified code case in server to pascal case

* unified client side code casing style to pascal case

* redesign document state in store

* unify frontend with current state design

* implement server side search feature

* fix frontend document search feature

* wrapup document search feature

[finishes #149774365]

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -8,9 +8,9 @@
     "dialect": "postgres"
   },
   "test": {
-    "username": "gisrmoqn",
-    "password": "gRVsbpZ0gwkbC9p0sE10-DvhReEGVXBG",
-    "database": "gisrmoqn",
+    "username": "wtgvyalj",
+    "password": "HrSPNSOb6dByUNjzbN4YzBPJQ8rob3yr",
+    "database": "wtgvyalj",
     "host": "stampy.db.elephantsql.com",
     "port": 5432,
     "dialect": "postgres"
