--- a/.eslintrc
+++ b/.eslintrc
@@ -1,36 +1,28 @@
 {
   "root": true,
   "extends": "airbnb",
-  "plugins": [
-    "react",
-    "jsx-a11y",
-    "import"
-  ],
-  "parserOptions": {
-    "ecmaVersion": 6, 
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
   "env": {
     "node": true,
     "browser": true,
     "es6": true,
-    "jasmine": true,
     "jest": true,
     "mocha": true,
     "jquery": true
   },
+  "globals": {
+    "tinymce": true
+  },
   "rules": {
-    "max-len": [2, 80],
     "one-var": 0,
+    "max-len": [2, 80, 2],
+    "indent": [1, 2],
     "one-var-declaration-per-line": 0,
+    "no-underscore-dangle": 0,
     "new-cap": 0,
     "consistent-return": 0,
     "no-param-reassign": 0,
     "comma-dangle": 0,
     "curly": ["error", "multi-line"],
-    "import/no-unresolved": [2, { "commonjs": true }],
     "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
     "valid-jsdoc": ["error", {
       "requireReturn": true,
@@ -38,12 +30,57 @@
       "requireParamDescription": false,
       "requireReturnDescription": true
     }],
-    "require-jsdoc": ["error", {
+    "require-jsdoc": [1, {
       "require": {
         "FunctionDeclaration": true,
-        "MethodDefinition": true,
-        "ClassDeclaration": true
+        "MethodDefinition": false,
+        "ClassDeclaration": false
       }
-    }]
+    }],
+    "import/no-dynamic-require": 0,
+    "import/no-unresolved": 0,
+    "class-methods-use-this": 0,
+    "no-script-url": 0,
+    "jsx-quotes": 1,
+    "jsx-a11y/label-has-for": 0,
+    "react/display-name": [ 1, {"ignoreTranspilerName": false }],
+    "react/forbid-prop-types": [1, {"forbid": ["any"]}],
+    "react/jsx-boolean-value": 1,
+    "react/jsx-closing-bracket-location": 0,
+    "react/jsx-curly-spacing": 1,
+    "react/jsx-indent-props": 0,
+    "react/jsx-key": 1,
+    "react/jsx-max-props-per-line": 0,
+    "react/jsx-no-bind": 0,
+    "react/jsx-no-duplicate-props": 1,
+    "react/jsx-no-literals": 0,
+    "react/jsx-no-undef": 1,
+    "react/jsx-pascal-case": 1,
+    "react/jsx-sort-prop-types": 0,
+    "react/jsx-sort-props": 0,
+    "react/jsx-uses-react": 1,
+    "react/jsx-uses-vars": 1,
+    "react/no-danger": 0,
+    "react/no-did-mount-set-state": 1,
+    "react/no-did-update-set-state": 1,
+    "react/no-direct-mutation-state": 1,
+    "react/no-multi-comp": 1,
+    "react/no-set-state": 0,
+    "react/no-unknown-property": 1,
+    "react/prefer-es6-class": 1,
+    "react/prop-types": 1,
+    "import/no-named-as-default": 0,
+    "react/react-in-jsx-scope": 1,
+    "react/require-extension": 1,
+    "react/self-closing-comp": 1,
+    "react/sort-comp": 0,
+    "react/no-array-index-key": 0,
+    "react/wrap-multilines": 1,
+    "react/prefer-stateless-function": 0,
+    "react/jsx-filename-extension": 0,
+    "arrow-body-style": 0,
+    "array-callback-return": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
+    "react/require-default-props": 0
   }
 }
