--- a/package.json
+++ b/package.json
@@ -72,16 +72,16 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-react": "^6.24.1",
     "babel-cli": "^6.24.1",
     "babel-jest": "^20.0.3",
+    "babel-loader": "^7.1.1",
     "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-node6": "^11.0.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
@@ -98,6 +98,7 @@
     "history": "^4.6.3",
     "joi-browser": "^10.6.0",
     "jsonwebtoken": "^7.4.1",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "pg": "^6.4.1",
