--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=8000
 SECRET_KEY=thatswhatfriendsarefor
-PROD_DATABASE_URL=postgres://zsrabyec:DRiF0QbOHNc-WZ3ttMLPXAt_0UN7QBM0@stampy.db.elephantsql.com:5432/zsrabyec
-TEST_DATABASE_URL=postgres://gisrmoqn:gRVsbpZ0gwkbC9p0sE10-DvhReEGVXBG@stampy.db.elephantsql.com:5432/gisrmoqn
+PROD_DATABASE_URL=postgres://glrqmkod:XZL1Oe0yEVayDYOXR0Q2B1ZP2pQK48Zu@stampy.db.elephantsql.com:5432/glrqmkod
+TEST_DATABASE_URL=postgres://wtgvyalj:HrSPNSOb6dByUNjzbN4YzBPJQ8rob3yr@stampy.db.elephantsql.com:5432/wtgvyalj
