--- a/server/config/config.json
+++ b/server/config/config.json
@@ -16,7 +16,11 @@
     "dialect": "postgres"
   },
   "production": {
-    "use_env_variable": "PROD_DATABASE_URL",
+    "username": "glrqmkod",
+    "password": "XZL1Oe0yEVayDYOXR0Q2B1ZP2pQK48Zu",
+    "database": "glrqmkod",
+    "host": "stampy.db.elephantsql.com",
+    "port": 5432,
     "dialect": "postgres"
   }
 }
