--- a/server/config/config.json
+++ b/server/config/config.json
@@ -8,18 +8,18 @@
     "dialect": "postgres"
   },
   "test": {
-    "username": "wtgvyalj",
-    "password": "HrSPNSOb6dByUNjzbN4YzBPJQ8rob3yr",
-    "database": "wtgvyalj",
-    "host": "stampy.db.elephantsql.com",
+    "username": "",
+    "password": null,
+    "database": "shift-dms-test",
+    "host": "localhost",
     "port": 5432,
     "dialect": "postgres"
   },
   "production": {
-    "username": "glrqmkod",
-    "password": "XZL1Oe0yEVayDYOXR0Q2B1ZP2pQK48Zu",
-    "database": "glrqmkod",
-    "host": "stampy.db.elephantsql.com",
+    "username": "",
+    "password": null,
+    "database": "shift-dms",
+    "host": "localhost",
     "port": 5432,
     "dialect": "postgres"
   }
