--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.2",
     "express": "^4.15.3",
+    "faker": "^4.1.0",
     "history": "^4.6.3",
     "joi-browser": "^10.6.0",
     "jquery": "^3.2.1",
