--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
-node_js: "7"
-script: npm run test
-# after_script:  
-#  - ./node_modules/.bin/gulp coveralls
+node_js: 
+  - "7"
+script: 
+  - npm test
+after_success:
+  - npm run coverage
