--- a/package.json
+++ b/package.json
@@ -5,33 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test-seed-all": "cross-env NODE_ENV=test sequelize db:seed:undo:all && cross-env NODE_ENV=test sequelize db:seed:all",
-    "test-server": "cross-env NODE_ENV=test nyc mocha --compilers js:babel-register --recursive ./server/test --timeout 90000",
-    "test-client": "cross-env NODE_ENV=test jest",
+    "test-server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --compilers js:babel-core/register ./server/test/**/*.js --timeout 90000",
+    "test-client": "cross-env NODE_ENV=test jest && codecov --token=e46f4969-5cd7-4566-8bfe-469317d234e5",
     "test": "npm run test-server && npm run test-client",
     "dev": "nodemon --watch server ./server/bin/www --exec babel-node",
-    "start": "babel-node ./server/bin/www",
-    "build": "cross-env NODE_ENV=production node ./server/bin/www"
-  },
-  "nyc": {
-    "require": [
-      "babel-register"
-    ],
-    "reporter": [
-      "lcov",
-      "text",
-      "html"
-    ],
-    "include": [
-      "server/"
-    ],
-    "sourceMap": false,
-    "instrument": false,
-    "exclude": [
-      "server/seeders",
-      "server/migrations",
-      "server/test"
-    ],
-    "all": true
+    "prestart": "npm run build",
+    "start": "node ./dist/bin/www",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "build": "rimraf ./dist && babel ./server -d ./dist --copy-files"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -39,12 +20,20 @@
       "js",
       "jsx"
     ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/server/utils/",
+      "/test-globals.js"
+    ],
     "collectCoverage": true,
     "transform": {
       "^.+\\.(js|jsx)$": "<rootDir>node_modules/babel-jest"
     },
     "unmockedModulePathPatterns": [
       "react"
+    ],
+    "setupFiles": [
+      "<rootDir>/test-globals.js"
     ]
   },
   "repository": {
@@ -58,6 +47,7 @@
   },
   "homepage": "https://github.com/andela-ifatoki/CP2-Shift-DMS#readme",
   "devDependencies": {
+    "enzyme": "^2.9.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
@@ -65,10 +55,11 @@
     "eslint-plugin-react": "^6.10.3",
     "jest": "^20.0.4",
     "mocha": "^3.4.2",
+    "moxios": "^0.4.0",
     "nodemon": "^1.11.0",
-    "nyc": "^11.0.3",
-    "react-hot-loader": "^1.3.1",
-    "sinon": "^2.3.5"
+    "nyc": "^10.3.2",
+    "react-test-renderer": "^15.6.1",
+    "sinon": "^2.4.1"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -90,6 +81,8 @@
     "chai": "^4.1.0",
     "chai-arrays": "^1.0.0",
     "chai-http": "^3.0.0",
+    "codecov": "^2.3.0",
+    "coveralls": "^2.13.1",
     "cross-env": "^5.0.1",
     "debug": "^2.6.8",
     "dotenv": "^4.0.0",
@@ -97,8 +90,9 @@
     "express": "^4.15.3",
     "faker": "^4.1.0",
     "history": "^4.6.3",
+    "istanbul": "^0.4.5",
     "joi-browser": "^10.6.0",
-    "jquery": "^3.2.1",
+    "jquery": "^2.1.4",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
@@ -109,18 +103,24 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
+    "react-html-parser": "^1.0.3",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tinymce": "^0.5.1",
     "redux": "^3.7.1",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.2.0",
+    "rimraf": "^2.6.1",
     "semantic-ui-react": "^0.71.0",
     "sequelize": "^3.3.4",
     "supertest": "^3.0.0",
+    "timeago": "^1.6.1",
+    "timeago-react": "^1.2.2",
     "tinymce": "^4.6.4",
     "toastr": "^2.1.2",
+    "validator": "^8.0.0",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0",
     "webpack-hot-middleware": "^2.18.2"
