--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test-seed-all": "cross-env NODE_ENV=test sequelize db:seed:undo:all && cross-env NODE_ENV=test sequelize db:seed:all",
     "test-server": "cross-env NODE_ENV=test nyc mocha --compilers js:babel-register --recursive ./server/test --timeout 90000",
-    "test-client": "cross-env NODE_ENV=test jest",
+    "test-client": "cross-env NODE_ENV=test jest --coverage client/",
     "test": "npm run test-server && npm run test-client",
     "dev": "nodemon --watch server ./server/bin/www --exec babel-node",
     "prestart": "npm run build",
@@ -14,25 +14,12 @@
     "build": "rimraf ./dist && babel ./server -d ./dist --copy-files"
   },
   "nyc": {
-    "require": [
-      "babel-register"
-    ],
-    "reporter": [
-      "lcov",
-      "text",
-      "html"
-    ],
-    "include": [
-      "server/"
-    ],
-    "sourceMap": false,
-    "instrument": false,
     "exclude": [
-      "server/seeders",
-      "server/migrations",
-      "server/test"
-    ],
-    "all": true
+      "**/*.spec.js",
+      "server/server.js",
+      "server/models/index.js",
+      "build"
+    ]
   },
   "jest": {
     "moduleFileExtensions": [
@@ -41,6 +28,9 @@
       "jsx"
     ],
     "collectCoverage": true,
+    "collectCoverageFrom": [
+      "client/**/*.jsx"
+    ],
     "transform": {
       "^.+\\.(js|jsx)$": "<rootDir>node_modules/babel-jest"
     },
@@ -59,6 +49,7 @@
   },
   "homepage": "https://github.com/andela-ifatoki/CP2-Shift-DMS#readme",
   "devDependencies": {
+    "enzyme": "^2.9.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
@@ -66,10 +57,13 @@
     "eslint-plugin-react": "^6.10.3",
     "jest": "^20.0.4",
     "mocha": "^3.4.2",
+    "moxios": "^0.4.0",
     "nodemon": "^1.11.0",
-    "nyc": "^11.0.3",
+    "nyc": "^11.1.0",
+    "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
-    "sinon": "^2.3.5"
+    "react-test-renderer": "^15.6.1",
+    "sinon": "^2.4.1"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -98,6 +92,7 @@
     "express": "^4.15.3",
     "faker": "^4.1.0",
     "history": "^4.6.3",
+    "istanbul": "^0.4.5",
     "joi-browser": "^10.6.0",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.1",
@@ -108,7 +103,6 @@
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
     "react-html-parser": "^1.0.3",
     "react-redux": "^5.0.5",
