implement component tests to 55.56%

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     },
     "unmockedModulePathPatterns": [
       "react"
+    ],
+    "setupFiles": [
+      "<rootDir>/test-globals.js"
     ]
   },
   "repository": {
