--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "react-tinymce": "^0.5.1",
     "redux": "^3.7.1",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
     "semantic-ui-react": "^0.71.0",
