--- a/package.json
+++ b/package.json
@@ -5,34 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test-seed-all": "cross-env NODE_ENV=test sequelize db:seed:undo:all && cross-env NODE_ENV=test sequelize db:seed:all",
-    "test-server": "cross-env NODE_ENV=test nyc mocha --compilers js:babel-register --recursive ./server/test --timeout 90000",
+    "test-server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --compilers js:babel-core/register ./server/test/**/*.js --timeout 90000",
     "test-client": "cross-env NODE_ENV=test jest",
     "test": "npm run test-server && npm run test-client",
     "dev": "nodemon --watch server ./server/bin/www --exec babel-node",
     "prestart": "npm run build",
     "start": "node ./dist/bin/www",
     "build": "rimraf ./dist && babel ./server -d ./dist --copy-files"
-  },
-  "nyc": {
-    "require": [
-      "babel-register"
-    ],
-    "reporter": [
-      "lcov",
-      "text",
-      "html"
-    ],
-    "include": [
-      "server/"
-    ],
-    "sourceMap": false,
-    "instrument": false,
-    "exclude": [
-      "server/seeders",
-      "server/migrations",
-      "server/test"
-    ],
-    "all": true
   },
   "jest": {
     "moduleFileExtensions": [
@@ -77,7 +56,7 @@
     "mocha": "^3.4.2",
     "moxios": "^0.4.0",
     "nodemon": "^1.11.0",
-    "nyc": "^11.1.0",
+    "nyc": "^10.3.2",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
     "react-test-renderer": "^15.6.1",
