--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "test-seed-all": "cross-env NODE_ENV=test sequelize db:seed:undo:all && cross-env NODE_ENV=test sequelize db:seed:all",
     "test-server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --compilers js:babel-core/register ./server/test/**/*.js --timeout 90000",
-    "test-client": "cross-env NODE_ENV=test jest",
+    "test-client": "cross-env NODE_ENV=test jest && codecov --token=e46f4969-5cd7-4566-8bfe-469317d234e5",
     "test": "npm run test-server && npm run test-client",
     "dev": "nodemon --watch server ./server/bin/www --exec babel-node",
     "prestart": "npm run build",
     "start": "node ./dist/bin/www",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "build": "rimraf ./dist && babel ./server -d ./dist --copy-files"
   },
   "jest": {
@@ -82,6 +83,8 @@
     "chai": "^4.1.0",
     "chai-arrays": "^1.0.0",
     "chai-http": "^3.0.0",
+    "codecov": "^2.3.0",
+    "coveralls": "^2.13.1",
     "cross-env": "^5.0.1",
     "debug": "^2.6.8",
     "dotenv": "^4.0.0",
