feature (test): e2e testing
setup and write comprehensive e2e tests

[finishes #150357072]

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -7,6 +7,8 @@ engines:
   eslint:
     enabled: true
     checks:
+      import/no-unresolved:
+        enabled: false
       import/extensions:
         enabled: false
   fixme:
