feature (pagination): implement document pagination
ensure not more than a few documents are available to the user at every point in time

[finishes #150475156]

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,8 @@
       ]}],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "import/no-named-as-default": 0,
+    "import/no-unresolved": 0,
+    "import/extensions": 0,
     "react/jsx-boolean-value": "off",
     "react/no-array-index-key": "off",
     "jsx-a11y/img-redundant-alt": "off",
