--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
     "react-html-parser": "^1.0.3",
+    "react-paginate": "^4.4.3",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
