chore (styling): migrate inline css to external
remove all inline styling and move them to an external scss file which would be extracted and compiled to css

[finishes #150476504]

--- a/package.json
+++ b/package.json
@@ -81,13 +81,16 @@
     "chai": "^4.1.0",
     "chai-arrays": "^1.0.0",
     "chai-http": "^3.0.0",
+    "classnames": "^2.2.5",
     "codecov": "^2.3.0",
     "coveralls": "^2.13.1",
     "cross-env": "^5.0.1",
+    "css-loader": "^0.28.5",
     "debug": "^2.6.8",
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.2",
     "express": "^4.15.3",
+    "extract-text-webpack-plugin": "^3.0.0",
     "faker": "^4.1.0",
     "history": "^4.6.3",
     "istanbul": "^0.4.5",
@@ -97,6 +100,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
+    "node-sass": "^4.5.3",
     "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.5.10",
@@ -114,8 +118,10 @@
     "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.6",
     "semantic-ui-react": "^0.71.0",
     "sequelize": "^3.3.4",
+    "style-loader": "^0.18.2",
     "supertest": "^3.0.0",
     "timeago": "^1.6.1",
     "timeago-react": "^1.2.2",
